--- a/project/SPTarkov.Launcher/Components/Settings/SettingSwitchComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/SettingSwitchComponent.razor
@@ -1,9 +1,9 @@
 ﻿<MudContainer Class="pa-0">
-    <a class="d-flex justify-center align-center @(Disabled ? "" : "cursor-pointer setting-on-hover") py-2 pl-5" @onclick="@SwitchFunc">
-        <MudText Class="no-select">@OptionName</MudText>
+    <MudLink Color="Color.Default" Underline="Underline.None" Disabled="Disabled" Class="@(GetLinkClasses())" OnClick="SwitchFunc">
+        <MudText Class="@(GetTextClasses())">@OptionName</MudText>
         <MudSpacer/>
-        <MudSwitch Disabled="@Disabled" @bind-Value="@Switch" Color="Color.Tertiary"/>
-    </a>
+        <MudSwitch Disabled="Disabled" @bind-Value="@Switch" Color="Color.Tertiary"/>
+    </MudLink>
 </MudContainer>
 @if (AddDiv)
 {
@@ -11,18 +11,43 @@
 }
 
 @code {
-    [Parameter]
-    public bool Disabled { get; set; }
 
-    [Parameter]
-    public bool AddDiv { get; set; }
+    private string GetLinkClasses()
+    {
+        var classes = new CssBuilder()
+            .AddClass("d-flex")
+            .AddClass("justify-center")
+            .AddClass("align-center")
+            .AddClass("py-2")
+            .AddClass("pl-5");
 
-    [Parameter]
-    public bool Switch { get; set; }
+        if (!Disabled)
+        {
+            classes.AddClass("cursor-pointer").AddClass("setting-on-hover");
+        }
 
-    [Parameter]
-    public string OptionName { get; set; }
+        return classes.Build();
+    }
 
-    [Parameter]
-    public Func<Task> SwitchFunc { get; set; }
+    private string GetTextClasses()
+    {
+        var classes = new CssBuilder().AddClass("no-select");
+
+        if (Disabled)
+        {
+            classes.AddClass("disabled-switch");
+        }
+
+        return classes.Build();
+    }
+
+    [Parameter] public bool Disabled { get; set; }
+
+    [Parameter] public bool AddDiv { get; set; }
+
+    [Parameter] public bool Switch { get; set; }
+
+    [Parameter] public string OptionName { get; set; }
+
+    [Parameter] public Func<Task> SwitchFunc { get; set; }
 }
