--- a/project/SPTarkov.Launcher/Pages/Home.razor
+++ b/project/SPTarkov.Launcher/Pages/Home.razor
@@ -6,7 +6,7 @@
 
 <MudContainer Class="px-4 my-2" MaxWidth="MaxWidth.Large">
     <MudContainer Class="pa-0 d-flex justify-space-between pb-4">
-        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.AddToQueue" Size="Size.Large" OnClick="RunAddTask" Variant="Variant.Filled" IconColor="Color.Success">@(LocaleHelper.Get("home_add_server"))</MudButton>
+        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.AddToQueue" Size="Size.Medium" OnClick="RunAddTask" Variant="Variant.Filled" IconColor="Color.Success" Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy">@(LocaleHelper.Get("home_add_server"))</MudButton>
     </MudContainer>
     <MudGrid>
         @if (serverList.Any())
