--- a/project/SPTarkov.Launcher/Pages/Profiles.razor
+++ b/project/SPTarkov.Launcher/Pages/Profiles.razor
@@ -8,9 +8,9 @@
 
 <MudContainer Class="px-4 my-2" MaxWidth="MaxWidth.Large">
     <MudContainer Class="pa-0 d-flex justify-start gap-2 pb-4">
-        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.ArrowBack" Size="Size.Medium" OnClick="ReturnToServers" Variant="Variant.Filled" IconColor="Color.Error">@(LocaleHelper.Get("profiles_disconnect"))</MudButton>
-        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.PersonAdd" Size="Size.Medium" OnClick="RunAddTask" Variant="Variant.Filled" IconColor="Color.Success">@(LocaleHelper.Get("profiles_create"))</MudButton>
-        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" Size="Size.Medium" OnClick="RunLoginTaskWithDetails" Variant="Variant.Filled" IconColor="Color.Success">@(LocaleHelper.Get("profiles_login"))</MudButton>
+        <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Color="Color.Dark" StartIcon="@Icons.Material.Filled.ArrowBack" Size="Size.Medium" OnClick="ReturnToServers" Variant="Variant.Filled" IconColor="Color.Error">@(LocaleHelper.Get("profiles_disconnect"))</MudButton>
+        <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Color="Color.Dark" StartIcon="@Icons.Material.Filled.PersonAdd" Size="Size.Medium" OnClick="RunAddTask" Variant="Variant.Filled" IconColor="Color.Success">@(LocaleHelper.Get("profiles_create"))</MudButton>
+        <MudButton Class="mud-button-border-copy border-2 border-solid mud-button-inner-text-copy" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" Size="Size.Medium" OnClick="RunLoginTaskWithDetails" Variant="Variant.Filled" IconColor="Color.Success">@(LocaleHelper.Get("profiles_login"))</MudButton>
     </MudContainer>
     <MudGrid>
         @foreach (var profile in ProfilesList)
@@ -22,12 +22,12 @@
         {
             case 0 when isConnected:
                 <MudItem sm="12">
-                    <MudAlert Severity="Severity.Info" Variant="Variant.Filled">@(LocaleHelper.Get("profiles_empty_warning"))</MudAlert>
+                    <MudAlert Severity="Severity.Info" Variant="Variant.Outlined">@(LocaleHelper.Get("profiles_empty_warning"))</MudAlert>
                 </MudItem>
                 break;
             case 0 when !isConnected:
                 <MudItem sm="12">
-                    <MudAlert Severity="Severity.Info" Variant="Variant.Filled">@(LocaleHelper.Get("profiles_connect_warning"))</MudAlert>
+                    <MudAlert Severity="Severity.Info" Variant="Variant.Outlined">@(LocaleHelper.Get("profiles_connect_warning"))</MudAlert>
                 </MudItem>
                 break;
         }
