add basic reponses to dialog

--- a/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/DetailedModComponent.razor
@@ -142,8 +142,11 @@
 
         if (result?.Canceled is false)
         {
-            Logger.LogInformation("Saved Apikey");
+            Logger.LogInformation("Started Download");
+            return;
         }
+
+        Logger.LogInformation("Download cancelled");
     }
 
 }
